libs/modkit-canonical-errors/tests/ui/missing_reason_on_out_of_range.stderr
error[E0599]: the method `create` exists for struct `ResourceErrorBuilder<ResourceOptional, NeedsFieldViolation>`, but its trait bounds were not satisfied
  --> tests/ui/missing_reason_on_out_of_range.rs:11:10
   |
10 |       let _err = UserResourceError::out_of_range("Page out of range")
   |  ________________-
11 | |         .create();
   | |         -^^^^^^ method cannot be called due to unsatisfied trait bounds
   | |_________|
   |
   |
  ::: src/builder.rs
   |
   |   pub struct NeedsFieldViolation;
   |   ------------------------------ doesn't satisfy `NeedsFieldViolation: ContextResolved`
   |
   = note: the following trait bounds were not satisfied:
           `NeedsFieldViolation: ContextResolved`
